# docs/swagger.json
@@ -154,7 +154,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.TenderReq"
+                            "$ref": "#/definitions/entity.TenderReq1"
                         }
                     }
                 ],
@@ -461,15 +461,6 @@
                     "User"
                 ],
                 "summary": "Get User Bids",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -514,15 +505,6 @@
                     "User"
                 ],
                 "summary": "Get User Tenders",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -701,14 +683,11 @@
                 }
             }
         },
-        "entity.TenderReq": {
+        "entity.TenderReq1": {
             "type": "object",
             "properties": {
                 "budget": {
                     "type": "number"
-                },
-                "client_id": {
-                    "type": "string"
                 },
                 "deadline": {
                     "type": "string"
